# medical-api-marketplace

./: .gitignore  README.md
api/: api-methods.md  index.js  package.json
client/: index.js  package.json
client/src/: App.js  index.js
client/src/components/: AccountInfo.js
client/src/utils/: config.js  cryptography.js  near.js
contract/: Cargo.toml  build.sh  near-cli.md
contract/src/: account.rs  lib.rs  listing.rs  receipt.rs
contract/wasm/: medical_api_marketplace.wasm
